<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Inicio.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/title_logup"
                android:textAlignment="center"
                android:textColor="#29509A"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textColor="#29509A"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editRegistroUsuarioNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_last_name"
                android:textColor="#29509A"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editRegistroUsuarioApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/hitn_apellidos"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sex"
                android:textColor="#29509A"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgRegistroUsuarioSexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/rbRegistroUsuarioMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_masculino"
                    android:textColor="#29509A" />

                <RadioButton
                    android:id="@+id/rbRegistroUsuarioFemenino"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_femenino"
                    android:textColor="#29509A" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_mail"
                android:textColor="#29509A"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editRegistroUsuarioMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/hint_mail"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:textColor="#29509A"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editRegistroUsuarioPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_confirm_password"
                android:textColor="#29509A"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editRegistroUsuarioConfirmarPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvRegistrarUsuarioErrorMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#DD233F"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegistrarUsuarioContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#29509A"
                android:onClick="RegistrarUsuarionuevo"
                android:text="@string/btn_registrar"
                android:textColor="#FDFCFC" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>