<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/linearFondoIndiceDeInseguridad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="#46000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/title_nivel_inseguridad"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/desconocido" />

        <TextView
            android:id="@+id/tvNivelInseguridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Nivel: "
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvUbicacionTiempoReal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Ubicación en Tiempo Real:"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvHoraUltimaActualizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Hora ult. actualización:"
            android:textColor="#000000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#FFFFFF"
            android:text="@string/title_sucesos"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvSucesos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="_ _ _"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnVerReportes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#29509A"
            android:onClick="VerReportes"
            android:text="@string/btn_ver_reportes"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnVerMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="verMapa"
            android:text="@string/btn_mapa"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGenerarReporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#29509A"
            android:onClick="GenerarReporte"
            android:text="@string/btn_generar_reporte"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>